--- a/CatchMe/Web.config
+++ b/CatchMe/Web.config
@@ -35,7 +35,7 @@
 
   </appSettings>
   <system.web>
-    <globalization culture="en-GB"/>    <!-- used for date format dd/MM/yyyy-->
+    <globalization culture="en-GB" />    <!-- used for date format dd/MM/yyyy-->
      <sessionState timeout="120"></sessionState>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -99,12 +99,12 @@
     
 <connectionStrings>
  <!-- server -->
-  <add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DWH-APPSDEV\DWHAPPSDEVSQL;initial catalog=CatchMeDB;integrated security=False;Uid=catchmeadmin;Pwd=catchmeadmin01;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <!--<add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DWH-APPSDEV\DWHAPPSDEVSQL;initial catalog=CatchMeDB;integrated security=False;Uid=catchmeadmin;Pwd=catchmeadmin01;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 <!-- local -->
 <!--<add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=CatchMeDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   
   <!-- loocal sit-->
-  <!--<add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=CatchMeDBSIT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=CatchMeDBSIT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 </connectionStrings>
 
 
