notification reviews styling and timing and events

--- a/CatchMe/Web.config
+++ b/CatchMe/Web.config
@@ -20,7 +20,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="SendEmail" value="false" />
+    <add key="SendEmail" value="true" />
     <add key="SendErrorEmail" value="true" />
     <add key="SmtpHostIp" value="172.17.14.10" />
     <add key="SmtpHostDns" value="mcbcas.mcb.local" />
