--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -331,6 +331,7 @@
     <Content Include="notes\CatchMeDB20160819.zip" />
     <Content Include="notes\SignalR Resources.txt" />
     <Content Include="notes\SignalRChat.zip" />
+    <Content Include="notes\prez.zip" />
     <None Include="Properties\PublishProfiles\dwh-appsdev %28Debug%29.pubxml" />
     <None Include="Properties\PublishProfiles\local %28www%29.pubxml" />
     <None Include="Properties\PublishProfiles\TestSite %28dwh-appsdev%29.pubxml" />
