modal for viewing comments

--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -568,6 +568,7 @@
     <Content Include="Scripts\plugins\tinymce\skins\lightgray\fonts\tinymce.woff" />
     <Content Include="Scripts\plugins\tinymce\themes\inlite\src\test\.eslintrc" />
     <Content Include="Views\Test\Index.cshtml" />
+    <Content Include="Views\Tasks\_ShowComment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
