changes business user

--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -325,21 +325,18 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
-    <Content Include="notes\catchme_data.7z" />
     <Content Include="notes\New folder.zip" />
     <Content Include="notes\chosen_v1.6.1.zip" />
-    <Content Include="notes\catchme version 1.zip" />
-    <Content Include="notes\CatchMeDB20160819.zip" />
     <Content Include="notes\SignalR Resources.txt" />
     <Content Include="notes\SignalRChat.zip" />
     <Content Include="notes\prez.zip" />
-    <Content Include="notes\CatchMeDB%2820160826%29.zip" />
     <Content Include="notes\CRM.zip" />
     <Content Include="notes\crm prez infra2.zip" />
     <Content Include="notes\CRM-final.zip" />
     <Content Include="notes\ibm certification.zip" />
     <Content Include="notes\DB2-10.5-with-BLU-Acceleration.pdf" />
     <Content Include="notes\C2090-615_Sample_QA.pdf" />
+    <Content Include="notes\CatchMeDB.zip" />
     <None Include="Properties\PublishProfiles\dwh-appsdev %28Debug%29.pubxml" />
     <None Include="Properties\PublishProfiles\local %28www%29.pubxml" />
     <None Include="Properties\PublishProfiles\TestSite %28dwh-appsdev%29.pubxml" />
