--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -337,6 +337,7 @@
     <Content Include="notes\DB2-10.5-with-BLU-Acceleration.pdf" />
     <Content Include="notes\C2090-615_Sample_QA.pdf" />
     <Content Include="notes\CatchMeDB.zip" />
+    <Content Include="notes\db2cgf.pdf" />
     <None Include="Properties\PublishProfiles\dwh-appsdev %28Debug%29.pubxml" />
     <None Include="Properties\PublishProfiles\local %28www%29.pubxml" />
     <None Include="Properties\PublishProfiles\TestSite %28dwh-appsdev%29.pubxml" />
