--- a/CatchMe/Web.config
+++ b/CatchMe/Web.config
@@ -99,9 +99,9 @@
     
 <connectionStrings>
  <!-- server -->
-  <add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DWH-APPSDEV\DWHAPPSDEVSQL;initial catalog=CatchMeDB;integrated security=False;Uid=catchmeadmin;Pwd=catchmeadmin01;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <!--<add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DWH-APPSDEV\DWHAPPSDEVSQL;initial catalog=CatchMeDB;integrated security=False;Uid=catchmeadmin;Pwd=catchmeadmin01;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 <!-- local -->
-<!--<add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=CatchMeDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+<add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CatchMeDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   
   <!-- loocal sit-->
   <!--<add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=CatchMeDBSIT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
