--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -303,6 +303,7 @@
     <Content Include="Images\dropdown.png" />
     <Content Include="Images\dropdown32.png" />
     <Content Include="Images\tfs-defect-screen.PNG" />
+    <Content Include="notes\catchme-db-updates.txt" />
     <Content Include="notes\catchme_create.sql" />
     <EntityDeploy Include="Models\CatchMe.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
